fix overflow scroll

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body {
   max-width: 600px;
   height: 100%;
   overflow: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .card__button {
